# crime-download

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: deploy.yaml
build-web/: Cargo.toml
src/: main.rs  popups.rs
