[package]
name = "stealy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_text_popup = "0.1.0"

[dependencies.rand]
version = "0.8.5"
features = ["std"]

[dependencies.bevy]
version = "0.11.3"
features = ["jpeg"]

[dependencies.bevy_svg]
version = "0.11.0"
default-features = false
features = ["2d"]
